# questions

./: pyproject.toml
questions/q1/: question1.ipynb
questions/q3/foreign_exchange_rate/: __manifest__.py
questions/q3/foreign_exchange_rate/data/: attendance_ad_type_data.xml  attendance_theme_data.xml  attendance_type_data.xml  calendar_data.xml  mail_template_data.xml  project_data.xml  user_data.xml
questions/q3/foreign_exchange_rate/models/: __init__.py  account_move.py  account_move_extension.py  exchange_rate.py
questions/q3/foreign_exchange_rate/security/: ir.model.access.csv
questions/q4/account_invoice_integration/: .gitignore  __manifest__.py
questions/q4/account_invoice_integration/data/: data.xml
questions/q4/account_invoice_integration/models/: __init__.py  account_invoice_integration.py  account_move.py
questions/q4/account_invoice_integration/security/: ir.model.access.csv
questions/q4/account_invoice_integration/views/: account_invoice_integration_view.xml
